--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {
+  height: 100%;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Times New Roman';
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg,
+  rgb(255, 255, 255) 0%,
+  rgb(151,243,212)50%,
+  rgb(36, 222, 107) 100%
+  );
+  color: rgb(0, 0, 0); 
+}
+button{
+  background: #75d499;
+  padding-top: 0 45px;
+  border: 2px solid black;
+  border-radius: 22px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: .4s;
+}
+button:hover{
+  background-color: #429c65;
 }
